# DeepRareAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  REFERENCES.md  config.example.yml  langgraph.json  pyproject.toml  requirement.txt  test_full_flow.sh  测试病例与问题.md  运行指南.md
DeepRareAgent/: __init__.py  graph.py  p01pre_diagnosis_agent.py  p03summary_agent.py  schema.py
DeepRareAgent/config/: __init__.py  loader.py
DeepRareAgent/p02_mdt/: builddeepexportnode.py  export_reviewer_node.py  export_reviwer_node.py  graph.py  nodes.py  routing.py
DeepRareAgent/prompts/: 02deepagent_main_prompt.txt  02deepagent_reviwer_prompt.txt  02deepagent_sub_prompt.txt  03summary_prompt.txt  03summary_prompt_v2.txt  prediagnosisprompt.txt
DeepRareAgent/states/: __init__.py  prediagnosis.py
DeepRareAgent/subagents/: clincialdatabasesubagent.py  filesupportsubagent.py  knowledgraphsubagent.py
DeepRareAgent/tools/: MedicalReportUpdate.py  README.md  __init__.py  baidu_tools.py  biomcp_tool.py  evidencemanager.py  hpo_tools.py  litsense_tool.py  patientinfo.py  wiki_tools.py  (+3 more)
benchmarks/: run_rarebench.py
docs/: api_reference.md  dynamic_bucket_support.md  fix_summary_passing.md  summary_generation_logic.md  summary_prompt_comparison.md  summary_style_guide.md  system_structure.md
examples/: README.md  api_client.py  quick_test_api.py  summary_style_examples.py  web_demo.html
images/: DiagnosticGrioup.dot
test/: README.md  test_mdt_messages_fix.py  test_mdt_schema_quick.py  test_ref_processing.py  test_subgraph_messages.py  test_summary_refs.py
tests/: README.md  test_dynamic_bucket.py  test_evidence_reference_fix.py  test_full_summary_flow.py  测试.ipynb
(+32 files in other folders)
